# linkpaper

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/src/linkpaper/: __init__.py  main.py
backend/src/linkpaper/adapters/: __init__.py
backend/src/linkpaper/adapters/llm/: __init__.py  openai_client.py
backend/src/linkpaper/api/: __init__.py  dependencies.py  router.py
backend/src/linkpaper/api/routes/: __init__.py  conversations.py  papers.py
backend/src/linkpaper/core/: __init__.py  config.py  exceptions.py  logging.py
backend/src/linkpaper/modules/: __init__.py
backend/src/linkpaper/modules/conversations/: __init__.py  models.py  service.py
backend/src/linkpaper/modules/documents/: __init__.py  models.py  service.py
backend/src/linkpaper/modules/generation/: __init__.py  models.py  service.py
backend/src/linkpaper/modules/knowledge_graph/: __init__.py  models.py  service.py
backend/src/linkpaper/modules/papers/: __init__.py  models.py  service.py
backend/src/linkpaper/modules/retrieval/: __init__.py  models.py  service.py
backend/src/linkpaper/pipelines/: __init__.py  paper_analysis.py  question_answering.py
backend/tests/: test_health.py
docs/: PROJECT_SPEC.md
evaluation/: README.md
frontend/: README.md
scripts/: README.md
