[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "linkpaper"
version = "0.1.0"
description = "GraphRAG-powered research paper exploration backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "pydantic-settings>=2.7,<3.0",
    "uvicorn[standard]>=0.34,<1.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28,<1.0",
    "pytest>=8.3,<9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/linkpaper"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

